some code cleanup and refactoring of NXMetaDataProvider
Change-Id: I4957ceac46a8c45b3bd434c537172ca160df4334