@@ -18,17 +18,18 @@
 
 package gda.data.metadata;
 
+import static java.util.stream.Collectors.joining;
+
 import java.io.Serializable;
 import java.lang.reflect.Array;
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
-import java.util.Comparator;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
-import java.util.Vector;
 
 import org.apache.commons.lang.ArrayUtils;
 import org.apache.commons.math3.util.Pair;
@@ -62,17 +63,17 @@ import gda.jython.InterfaceProvider;
 
 public class NXMetaDataProvider extends FindableBase implements NexusTreeAppender, Map<String, Object> {
 
-	private static final String GROUP_ITEM_SEPARATOR = ".";		// single dot
-	private static final String FIELD_ITEM_SEPARATOR = ".";		// single dot
+	private static final String GROUP_ITEM_SEPARATOR = "."; // single dot
+	private static final String FIELD_ITEM_SEPARATOR = "."; // single dot
 	private static final String PREAMBLE = "meta:\n";
-	private static final String LS_NEXT_ITEM_SEPARATOR = "\n";	// single new line
-	private static final String LL_NEXT_ITEM_SEPARATOR = "\n";	// single new line
+	private static final String LS_NEXT_ITEM_SEPARATOR = "\n"; // single new line
+	private static final String LL_NEXT_ITEM_SEPARATOR = "\n"; // single new line
 	private static final String LL_MID_CONNECTOR = " = ";
-	private static final String LL_UNITS_SEPARATOR = " ";		// single white space
+	private static final String LL_UNITS_SEPARATOR = " "; // single white space
 
 	private static final String LL_ARRAY_OPEN = "[";
 	private static final String LL_ARRAY_CLOSE = "]";
-	private static final String LL_ARRAY_ITEM_SEPARATOR = ", ";	// single coma followed by single white space
+	private static final String LL_ARRAY_ITEM_SEPARATOR = ", "; // single coma followed by single white space
 	private static final String LL_FLOAT_ARRAY_FORMAT = "%5.3f";
 	private static final String LL_INT_ARRAY_FORMAT = "%d";
 
@@ -105,26 +106,24 @@ public class NXMetaDataProvider extends FindableBase implements NexusTreeAppende
 	private static final String ATTRIBUTE_VALUE_FOR_FIELD_TYPE_INPUT = "input";
 	private static final String ATTRIBUTE_VALUE_FOR_FIELD_TYPE_EXTRA = "extra";
 
-
-	Map<String, Object> metaTextualMap;
-	//List<Scannable> metaScannables = new Vector<Scannable>();
+	private Map<String, Object> metaTextualMap;
 
 	private boolean withScannables = false;
 
-	private Collection<String> dynamicScannables = new Vector<String>();
+	private List<String> dynamicScannables = Collections.synchronizedList(new ArrayList<>());
 
 	private static final Logger logger = LoggerFactory.getLogger(NXMetaDataProvider.class);
 
 	public NXMetaDataProvider() {
 		super();
-		defaultFormattingMap.put("PREAMBLE", "meta:\n");			//
-		defaultFormattingMap.put("LS_NEXT_ITEM_SEPARATOR", "\n");	// single new line
+		defaultFormattingMap.put("PREAMBLE", "meta:\n"); //
+		defaultFormattingMap.put("LS_NEXT_ITEM_SEPARATOR", "\n"); // single new line
 		defaultFormattingMap.put("LL_MID_CONNECTOR", " = ");
-		defaultFormattingMap.put("LL_NEXT_ITEM_SEPARATOR", "\n");	// single new line
-		defaultFormattingMap.put("LL_UNITS_SEPARATOR", " ");		// single space
+		defaultFormattingMap.put("LL_NEXT_ITEM_SEPARATOR", "\n"); // single new line
+		defaultFormattingMap.put("LL_UNITS_SEPARATOR", " "); // single space
 		defaultFormattingMap.put("LL_ARRAY_OPEN", "[");
 		defaultFormattingMap.put("LL_ARRAY_CLOSE", "]");
-		defaultFormattingMap.put("LL_ARRAY_ITEM_SEPARATOR", ", ");	// single coma followed by single space
+		defaultFormattingMap.put("LL_ARRAY_ITEM_SEPARATOR", ", "); // single coma followed by single space
 		defaultFormattingMap.put("LL_FLOAT_ARRAY_FORMAT", "%5.3f");
 		defaultFormattingMap.put("LL_INT_ARRAY_FORMAT", "%d");
 
@@ -133,39 +132,42 @@ public class NXMetaDataProvider extends FindableBase implements NexusTreeAppende
 
 	@Override
 	public void appendToTopNode(INexusTree topNode) {
-		for (Entry<String, Object> e : metaTextualMap.entrySet()) {
-			INexusTree childNode = createChildNodeForTextualMetaEntry(e, topNode);
+		for (Entry<String, Object> entry : metaTextualMap.entrySet()) {
+			final INexusTree childNode = createChildNodeForTextualMetaEntry(entry, topNode);
 			if (childNode != null) {
 				topNode.addChildNode(childNode);
 			} else {
-				logger.debug("Nexus tree child node is null for " + e.getKey());
+				logger.debug("Nexus tree child node is null for {}", entry.getKey());
 			}
 		}
 
 		if (withScannables) {
-			//for (Scannable scn : metaScannables) {
-			List<Scannable> metaScannableList = new Vector<Scannable>();
-			Set<String> metaScannableSet = ServiceHolder.getNexusDataWriterConfiguration().getMetadataScannables();
+			final List<Scannable> metaScannableList = new ArrayList<>();
+			final Set<String> metaScannableSet = ServiceHolder.getNexusDataWriterConfiguration()
+					.getMetadataScannables();
 			for (String scannableName : metaScannableSet) {
-				Scannable scannable = (Scannable) InterfaceProvider.getJythonNamespace().getFromJythonNamespace(scannableName);
+				Scannable scannable = (Scannable) InterfaceProvider.getJythonNamespace()
+						.getFromJythonNamespace(scannableName);
 				if (scannable == null) {
-					throw new IllegalStateException("could not find scannable '" + scannableName + "' in Jython namespace.");
+					throw new IllegalStateException(
+							"could not find scannable '" + scannableName + "' in Jython namespace.");
 				}
 				metaScannableList.add(scannable);
 			}
+
 			for (Scannable scn : metaScannableList) {
-//				System.out.println("getNexusTree: scannable = " + scn.getName());
 				try {
-					Map<String, Object> scannableMap = createMetaScannableMap(scn);
-					//System.out.println("\t scannableMap = " + scannableMap.toString());
-					INexusTree childNode = createChildNodeForScannableMetaEntry(scn, topNode, scannableMap); //TODO Change name
+					final Map<String, Object> scannableMap = createMetaScannableMap(scn);
+					final INexusTree childNode = createChildNodeForScannableMetaEntry(scn, topNode, scannableMap); // TODO
+																													// Change
+																													// name
 					if (childNode != null) {
 						topNode.addChildNode(childNode);
 					} else {
-						logger.debug("Nexus tree child node is null for " + scn.getName());
+						logger.debug("Nexus tree child node is null for {}", scn.getName());
 					}
 				} catch (DeviceException e1) {
-					logger.error("Error creating metadata for scannable" + scn.getName(), e1);
+					logger.error("Error creating metadata for scannable {}", scn.getName(), e1);
 				}
 
 			}
@@ -173,8 +175,8 @@ public class NXMetaDataProvider extends FindableBase implements NexusTreeAppende
 	}
 
 	public void reset() {
-		this.metaTextualMap = new HashMap<String, Object>();
-		this.formattingMap = new HashMap<String, String>();
+		this.metaTextualMap = new HashMap<>();
+		this.formattingMap = new HashMap<>();
 
 		formattingMap.put("preamble", defaultFormattingMap.get("PREAMBLE"));
 		formattingMap.put("lsNextItemSeparator", defaultFormattingMap.get("LS_NEXT_ITEM_SEPARATOR"));
@@ -186,13 +188,11 @@ public class NXMetaDataProvider extends FindableBase implements NexusTreeAppende
 		formattingMap.put("llArrayItemSeparator", defaultFormattingMap.get("LL_ARRAY_ITEM_SEPARATOR"));
 		formattingMap.put("llFloatArrayFormat", defaultFormattingMap.get("LL_FLOAT_ARRAY_FORMAT"));
 		formattingMap.put("llIntArrayFormat", defaultFormattingMap.get("LL_INT_ARRAY_FORMAT"));
-
-		//modifyFormattingMap(defaultFormattingMap);
 	}
 
 	/**
-	 * Removes all scannables added with NXMetaDataProvider.add(..).
-	 * Does not restore anything that was removed or overwritten.
+	 * Removes all scannables added with NXMetaDataProvider.add(..). Does not restore anything that was removed or
+	 * overwritten.
 	 */
 	public void clearDynamicScannableMetadata() {
 		for (String name : dynamicScannables) {
@@ -201,66 +201,32 @@ public class NXMetaDataProvider extends FindableBase implements NexusTreeAppende
 		dynamicScannables.clear();
 	}
 
-	public String listAsString(String fmt, String delimiter) {
-		// TODO Auto-generated method stub
-		String total = "";
-		for (Entry<String, Object> e : metaTextualMap.entrySet()) {
-			total += "," + e.getKey() + ":" + e.getValue();
-		}
-		// String x = concatenateKeyAndValueForListAsString("%s:%x", ",");
-		String x = concatenateKeyAndValueForListAsString(fmt, delimiter);
-		System.out.println("***x = " + x);
-		total = x;
-		return total;
-	}
-
-	public String concatenateKeyAndValueForListAsString(String fmt, String delimiter) {
-		String concatenated = "";
-		int sanityCheck = StringUtils.countOccurrencesOf(fmt, "%s");
-		System.out.println("***sanityCheck = " + sanityCheck);
-		if (sanityCheck == 2) {
-			for (Entry<String, Object> e : metaTextualMap.entrySet()) {
-				// concatenated += "," + e.getKey() + ":" + e.getValue();
-				concatenated += String.format(fmt, e.getKey(), e.getValue());
-				concatenated += delimiter;
-			}
-			// remove the unnecessary last delimiter
-			concatenated = concatenated.substring(0, concatenated.length() - 1);
-		} else {
-			String defaultFmt = "%s:%s";
-			String defaultDelimiter = ",";
-			logger.warn("Bad input format: " + "\"" + fmt + "\"" + " is " + "replaced by default format: " + "\""
-					+ defaultFmt + "\"");
-			concatenated = concatenateKeyAndValueForListAsString(defaultFmt, defaultDelimiter);
-		}
-		// remove the unnecessary last delimiter, if present
-		// if ( concatenated.lastIndexOf(delimiter)==(concatenated.length()-1)){
-		// concatenated = concatenated.substring(0, concatenated.length()-1);
-		// }
-		return concatenated;
+	public String listAsString(String format, String delimiter) {
+		final boolean useDefaultFormat = StringUtils.countOccurrencesOf(format, "%s") != 2;
+		final String actualFormat = useDefaultFormat ? "%s:%s" : format;
+		final String actualDelimiter = useDefaultFormat ? "," : delimiter;
+		return entrySet().stream().map(entry -> String.format(actualFormat, entry.getKey(), entry.getValue()))
+				.collect(joining(actualDelimiter));
 	}
 
 	public void setMetaTexts(Map<String, String> metaTexts) {
-		for (String key : metaTexts.keySet()) {
-			add(key, metaTexts.get(key));
+		for (Map.Entry<String, String> entry : metaTexts.entrySet()) {
+			add(entry.getKey(), entry.getValue());
 		}
 	}
 
 	public Map<String, Object> getMetaTexts() {
-		Map<String, Object> outMap = new HashMap<String, Object>(metaTextualMap);
-		return outMap;
+		return new HashMap<>(metaTextualMap);
 	}
 
 	public void add(String key, Object value, String units) {
-		Pair<Object, String> valueWithUnits = new Pair<Object, String>(value, units);
+		final Pair<Object, String> valueWithUnits = new Pair<>(value, units);
 		put(key, valueWithUnits);
-		//System.out.println("adding user-supplied given 3 args");
 	}
 
 	public void add(MetaDataUserSuppliedItem userSupplied) {
-		Pair<Object, String> valueWithUnits = new Pair<Object, String>(userSupplied.getValue(), userSupplied.getUnits());
+		final Pair<Object, String> valueWithUnits = new Pair<>(userSupplied.getValue(), userSupplied.getUnits());
 		put(userSupplied.getKey(), valueWithUnits);
-		//System.out.println("adding user-supplied given 1 MetaDataUserSuppliedItem arg");
 	}
 
 	@Override
@@ -295,9 +261,6 @@ public class NXMetaDataProvider extends FindableBase implements NexusTreeAppende
 
 	@Override
 	public Object remove(Object key) {
-		//String msg = "remove key = " + key;
-		//logger.debug(msg);
-		//System.out.println(msg);
 		return metaTextualMap.remove(key);
 	}
 
@@ -343,16 +306,17 @@ public class NXMetaDataProvider extends FindableBase implements NexusTreeAppende
 	}
 
 	public List<Scannable> getMetaScannables() {
-		final List<Scannable> metaScannableList = new Vector<Scannable>();
+		final List<Scannable> metaScannableList = new ArrayList<>();
 		final Set<String> metaScannableSet = ServiceHolder.getNexusDataWriterConfiguration().getMetadataScannables();
 		for (String scannableName : metaScannableSet) {
 
 			try {
-				Scannable scannable = (Scannable) InterfaceProvider.getJythonNamespace().getFromJythonNamespace(scannableName);
+				Scannable scannable = (Scannable) InterfaceProvider.getJythonNamespace()
+						.getFromJythonNamespace(scannableName);
 				if (scannable == null) {
-					logger.warn("Scannable '{}' is not in Jython namespace - it will not be included in metadata", scannableName);
-				}
-				else {
+					logger.warn("Scannable '{}' is not in Jython namespace - it will not be included in metadata",
+							scannableName);
+				} else {
 					metaScannableList.add(scannable);
 				}
 			} catch (ClassCastException e) {
@@ -362,20 +326,20 @@ public class NXMetaDataProvider extends FindableBase implements NexusTreeAppende
 		return metaScannableList;
 	}
 
-
 	/*
 	 * To be called by meata_ls command
 	 */
 	public String list(boolean withValues) {
 		withScannables = true;
-		return concatenateContentsForList(withValues, preamble, lsNextItemSeparator, llMidConnector, llNextItemSeparator);
+		return concatenateContentsForList(withValues, preamble, lsNextItemSeparator, llMidConnector,
+				llNextItemSeparator);
 	}
 
-	public String concatenateContentsForList(boolean withValues, String preamble, String lsNextItemSeparator, String llMidConnector, String llNextItemSeparator) {
-
-		INexusTree listTree = new NexusTreeNode("list", NexusExtractor.NXCollectionClassName, null);
+	public String concatenateContentsForList(boolean withValues, String preamble, String lsNextItemSeparator,
+			String llMidConnector, String llNextItemSeparator) {
+		final INexusTree listTree = new NexusTreeNode("list", NexusExtractor.NXCollectionClassName, null);
 		appendToTopNode(listTree);
-		NexusTreeStringDump treeDump = new NexusTreeStringDump(listTree);
+		final NexusTreeStringDump treeDump = new NexusTreeStringDump(listTree);
 
 		String strOut = "";
 		if (preamble == null) {
@@ -404,90 +368,27 @@ public class NXMetaDataProvider extends FindableBase implements NexusTreeAppende
 			llNextItemSeparatorUsed += llNextItemSeparator;
 		}
 
-		List<DatumForJythonList> alphabeticalOut = new Vector<DatumForJythonList>();
-
-
+		final List<DatumForJythonList> alphabeticalOut = new ArrayList<>();
 		NexusGroupData ngdFieldType = null;
 		for (Pair<String, NexusDumpItem> e : treeDump.getDumpList()) {
 			String name = e.getFirst();
 			String value = llMidConnectorUsed + e.getSecond().toString() + llNextItemSeparator;
-			String field_type = "";
+			String fieldType = "";
 			ngdFieldType = e.getSecond().getFieldType();
-			if (ngdFieldType != null ) {
-				field_type = ngdFieldType.toString();
+			if (ngdFieldType != null) {
+				fieldType = ngdFieldType.toString();
 			}
-			alphabeticalOut.add( new DatumForJythonList(name, value, field_type));
+			alphabeticalOut.add(new DatumForJythonList(name, value, fieldType));
 		}
 
-		Collections.sort(alphabeticalOut, new Comparator<DatumForJythonList>() {
-		@Override
-		public int compare(final DatumForJythonList o1, final DatumForJythonList o2) {
-
-			int out = 0;
-			String name1 = o1.datumName;
-			String fieldType1 = o1.datumFieldType;
-
-			String name2 = o2.datumName;
-			String fieldType2 = o2.datumFieldType;
-
-			String splitOn = FIELD_ITEM_SEPARATOR;
-			if (splitOn.equals(".")) {
-				splitOn = "\\" + splitOn;
-			}
-			String[] split1 = name1.split("\\.",-1);
-			String[] split2 = name2.split("\\.",-1);
-			int count1 = split1.length-1;
-			int count2 = split2.length-1;
-
-			String root1 = name1;
-			int lastIdx1 = name1.lastIndexOf("\\.");
-			if (lastIdx1 >= 0) {
-				root1 = name1.substring(0, lastIdx1);
-			}
-
-			String root2 = name2;
-			int lastIdx2 = name2.lastIndexOf("\\.");
-			if (lastIdx2 >= 0) {
-				root2 = name2.substring(0, lastIdx2);
-			}
-
-			if (count1 != count2) {
-				out = name1.toLowerCase().compareTo(name2.toLowerCase());
-				//System.out.println("count1 != count2: out = " + out );
-			}
-			else
-			{
-				// if belong to the same scannable
-				if (root1.equals(root2)) {
-					//System.out.println("CASE split1[count1] == split2[count2]: out = " + out );
-					if (fieldType1 == ATTRIBUTE_VALUE_FOR_FIELD_TYPE_INPUT && fieldType2 == ATTRIBUTE_VALUE_FOR_FIELD_TYPE_EXTRA) {
-						// input before extra
-						out = 1;
-						//System.out.println("input before extra: out = " + out );
-					} else if (fieldType1 == ATTRIBUTE_VALUE_FOR_FIELD_TYPE_EXTRA && fieldType2 == ATTRIBUTE_VALUE_FOR_FIELD_TYPE_INPUT) {
-						// input before extra
-						out = -1;
-						//System.out.println("extra after input: out = " + out );
-					} else {
-						out = name1.toLowerCase().compareTo(name2.toLowerCase());
-						//System.out.println("same field types: out = " + out);
-					}
-				} else {
-					out = name1.toLowerCase().compareTo(name2.toLowerCase());
-					//System.out.println("CASE split1[count1] != split2[count2]: out = " + out );
-				}
-			}
-			//System.out.println("END: out = " + out );
-			return out;
-			}
-		} );
+		Collections.sort(alphabeticalOut);
 
 		if (withValues) {
 			for (DatumForJythonList d : alphabeticalOut) {
 				strOut += d.datumName;
-				//strOut += llMidConnectorUsed;			//already included
+				// strOut += llMidConnectorUsed; //already included
 				strOut += d.datumValue;
-				//strOut += llNextItemSeparatorUsed;	//already included
+				// strOut += llNextItemSeparatorUsed; //already included
 			}
 			int substringLen = strOut.length() - llNextItemSeparatorUsed.length();
 			if (substringLen >= 0) {
@@ -496,7 +397,6 @@ public class NXMetaDataProvider extends FindableBase implements NexusTreeAppende
 
 			return strOut;
 		}
-
 
 		for (DatumForJythonList d : alphabeticalOut) {
 			strOut += d.datumName + lsNextItemSeparatorUsed;
@@ -522,15 +422,16 @@ public class NXMetaDataProvider extends FindableBase implements NexusTreeAppende
 				if (arg instanceof Scannable) {
 					add((Scannable) arg);
 				} else {
-					throw new IllegalArgumentException("Invalid argument: " + arg.toString() + " is not a Scannable! Usage: add(String,Object [,String]) or add(Scannable [,Scannable,Scannable...]))");
+					throw new IllegalArgumentException("Invalid argument: " + arg.toString()
+							+ " is not a Scannable! Usage: add(String,Object [,String]) or add(Scannable [,Scannable,Scannable...]))");
 				}
 			}
 		}
 	}
 
 	public void add(Scannable scannable) {
-		logger.debug("add called on scannable = " + scannable.getName());
-		String scannableName = scannable.getName();
+		final String scannableName = scannable.getName();
+		logger.debug("add called on scannable: {}", scannableName);
 		dynamicScannables.add(scannableName);
 		ServiceHolder.getNexusDataWriterConfiguration().getMetadataScannables().add(scannableName);
 	}
@@ -548,85 +449,53 @@ public class NXMetaDataProvider extends FindableBase implements NexusTreeAppende
 	}
 
 	public void remove(Scannable scannable) {
-		String name = scannable.getName();
-		logger.debug("remove called on scannable = " + name);
-		//metaScannables.remove(scannable);
-		ServiceHolder.getNexusDataWriterConfiguration().removeMetadataScannable(name);
-		dynamicScannables.remove(name);
+		String scannableName = scannable.getName();
+		logger.debug("remove called on scannable {}", scannableName);
+		ServiceHolder.getNexusDataWriterConfiguration().removeMetadataScannable(scannableName);
+		dynamicScannables.remove(scannableName);
 	}
 
-
-	public Map<String, Object> createMetaScannableMap(Scannable scn) throws DeviceException {
-		Map<String, Object> metaScannableMapObj = new HashMap<String, Object>();
-
-		List<ScannableMetaEntryObj> metasObj = new Vector<ScannableMetaEntryObj>();
+	public Map<String, Object> createMetaScannableMap(Scannable scannable) throws DeviceException {
+		final Map<String, Object> metaScannableMapObj = new HashMap<>();
 
 		Object scnPos = null;
 		try {
-			scnPos = scn.getPosition();
+			scnPos = scannable.getPosition();
 		} catch (Exception e) {
-			throw new DeviceException("Error calling getPosition on scannable " + scn.getName(), e);
+			throw new DeviceException("Error calling getPosition on scannable " + scannable.getName(), e);
 		}
 
-		if (scnPos == null){
+		if (scnPos == null) {
 			// something's wrong in the scannable! log this and call the metadata "null"
-			logger.info("Null returned when asking " + scn.getName() + " for its position");
+			logger.info("Null returned when asking {} for its position", scannable.getName());
 			scnPos = "null";
 		}
 
-		Object[] elementalGetPosObjects = separateGetPositionOutputIntoElementalPosObjects(scnPos);
-
-		List<String> scannableFieldNames = getScannableFieldNames(scn);
+		final Object[] elementalGetPosObjects = separateGetPositionOutputIntoElementalPosObjects(scnPos);
+		final List<String> scannableFieldNames = getScannableFieldNames(scannable);
 
 		for (int i = 0; i < scannableFieldNames.size(); i++) {
-			metasObj.add(new ScannableMetaEntryObj(scannableFieldNames.get(i), elementalGetPosObjects[i]));
-		}
-
-		for (ScannableMetaEntryObj e : metasObj) {
-			metaScannableMapObj.put(e.key, e.value);
+			metaScannableMapObj.put(scannableFieldNames.get(i), elementalGetPosObjects[i]);
 		}
 
 		return metaScannableMapObj;
-	}
-
-	class ScannableMetaEntry {
-		public String key;
-		public String value;
-
-		public ScannableMetaEntry(String key, String value) {
-			super();
-			this.key = key;
-			this.value = value;
-		}
-
-	}
-
-	class ScannableMetaEntryObj {
-		public String key;
-		public Object value;
-
-		public ScannableMetaEntryObj(String key, Object value) {
-			super();
-			this.key = key;
-			this.value = value;
-		}
-
 	}
 
 	@Override
 	public String getName() {
 		final String name = super.getName();
 		if (name == null || name.isEmpty()) {
-			logger.warn("getName() called on NXMetaDataProvider when the name has not been set. This may cause problems in the system and should be fixed.");
+			logger.warn(
+					"getName() called on NXMetaDataProvider when the name has not been set. This may cause problems in the system and should be fixed.");
 		}
 		return name;
 	}
 
 	public List<String> getScannableFieldNames(Scannable scannable) {
-		Vector<String> fieldNames = new Vector<String>();
+		final List<String> fieldNames = new ArrayList<>();
 
 		// if detector the inputNames are not returned in ScanDataPoint so do not add
-		String[] extraNames = scannable.getExtraNames();
+		final String[] extraNames = scannable.getExtraNames();
 		if (scannable instanceof Detector) {
 			if (extraNames.length > 0) {
 				fieldNames.addAll(Arrays.asList(extraNames));
@@ -641,44 +510,27 @@ public class NXMetaDataProvider extends FindableBase implements NexusTreeAppende
 	}
 
 	public List<String> getScannableInputNames(Scannable scannable) {
-		Vector<String> outNames = new Vector<String>();
-
-		// if detector the inputNames are not returned in ScanDataPoint so do not add
-		if (!(scannable instanceof Detector)) {
-			outNames.addAll(Arrays.asList(scannable.getInputNames()));
-		}
-		return outNames;
+		return scannable instanceof Detector ? Collections.emptyList() : Arrays.asList(scannable.getInputNames());
 	}
 
 	public List<String> getScannableExtraNames(Scannable scannable) {
-		Vector<String> outNames = new Vector<String>();
-
-		String[] extraNames = scannable.getExtraNames();
-		if (scannable instanceof Detector) {
-			if (extraNames.length > 0) {
-				outNames.addAll(Arrays.asList(extraNames));
-			} else {
-				outNames.add(scannable.getName());
-			}
-		} else {
-			outNames.addAll(Arrays.asList(extraNames));
-		}
-		return outNames;
+		final String[] extraNames = scannable.getExtraNames();
+		return (scannable instanceof Detector && extraNames.length == 0) ? List.of(scannable.getName())
+				: Arrays.asList(extraNames);
 	}
 
-	public INexusTree createChildNodeForTextualMetaEntry(Entry<String, Object> e, INexusTree parentNode) {
-		String childNodeName = e.getKey();
-		Object object = e.getValue();
+	public INexusTree createChildNodeForTextualMetaEntry(Entry<String, Object> entry, INexusTree parentNode) {
+		final String childNodeName = entry.getKey();
+		Object object = entry.getValue();
 		String units = "placeholder units";
 		if (object instanceof Pair) {
-			Pair<?, ?> valueWithUnits = (Pair<?, ?>) e.getValue();
+			Pair<?, ?> valueWithUnits = (Pair<?, ?>) entry.getValue();
 			object = valueWithUnits.getFirst();
 			units = (String) valueWithUnits.getSecond();
 		}
-		NexusGroupData groupData = null;
-		groupData = createNexusGroupData(object);
 
-		INexusTree node = new NexusTreeNode(childNodeName, NexusExtractor.SDSClassName, parentNode, groupData);
+		final NexusGroupData groupData = createNexusGroupData(object);
+		final INexusTree node = new NexusTreeNode(childNodeName, NexusExtractor.SDSClassName, parentNode, groupData);
 
 		node.addChildNode(new NexusTreeNode(ATTRIBUTE_KEY_FOR_METADATA_TYPE, NexusExtractor.AttrClassName, node,
 				new NexusGroupData(ATTRIBUTE_VALUE_FOR_METADATA_TYPE_SUPPLIED)));
@@ -690,59 +542,48 @@ public class NXMetaDataProvider extends FindableBase implements NexusTreeAppende
 		return node;
 	}
 
-
-	public INexusTree createChildNodeForScannableMetaEntry(Scannable scn, INexusTree parentNode,
+	public INexusTree createChildNodeForScannableMetaEntry(Scannable scannable, INexusTree parentNode,
 			Map<String, Object> scannableMap) {
 		INexusTree node = null;
 
-		List<String> fieldNames = ScannableUtils.getScannableFieldNames( Arrays.asList(new Scannable[]{scn}));
-		List<String> inputNames = new Vector<String>();
-		inputNames = getScannableInputNames(scn);
+		final List<String> fieldNames = ScannableUtils.getScannableFieldNames(List.of(scannable));
+		final List<String> inputNames = getScannableInputNames(scannable);
+		final List<String> extraNames = getScannableExtraNames(scannable);
 
-		List<String> extraNames = new Vector<String>();
-		extraNames = getScannableExtraNames(scn);
-
-		int inputSize = inputNames.size();
-		int extraSize = extraNames.size();
-		int fieldSize = fieldNames.size();
-
-		if (inputSize + extraSize != fieldSize ) {
-			String msg = "input names + extra names != field names (" + Integer.toString(inputSize) + " + " + Integer.toString(extraSize) + " != " + Integer.toString(fieldSize);
-
-			System.out.println(msg);
-			//throw new DeviceException("input names + extra names != field names ("inputNames.size());
+		if (inputNames.size() + extraNames.size() != fieldNames.size()) {
+			logger.error("Field names size was {}, expected {} (sum of input names size {} and extra name size {}",
+					fieldNames.size(), inputNames.size() + extraNames.size(), inputNames.size(), extraNames.size());
 		}
 
-		if (scn instanceof IScannableGroup) {
-
-			node = new NexusTreeNode(scn.getName(), NexusExtractor.NXCollectionClassName, parentNode);
+		if (scannable instanceof IScannableGroup) {
+			node = new NexusTreeNode(scannable.getName(), NexusExtractor.NXCollectionClassName, parentNode);
 			node.addChildNode(new NexusTreeNode(ATTRIBUTE_KEY_FOR_METADATA_TYPE, NexusExtractor.AttrClassName, node,
 					new NexusGroupData(ATTRIBUTE_VALUE_FOR_METADATA_TYPE_SCANNABLE_GROUP)));
 
-			for (Scannable s : ((ScannableGroup) scn).getGroupMembersAsArray()) {
-				INexusTree sNode = createChildNodeForScannableMetaEntry(s, node, scannableMap);
-				if (sNode != null) {
-					node.addChildNode(sNode);
+			for (Scannable childScannable : ((ScannableGroup) scannable).getGroupMembersAsArray()) {
+				final INexusTree scannableNode = createChildNodeForScannableMetaEntry(childScannable, node,
+						scannableMap);
+				if (scannableNode != null) {
+					node.addChildNode(scannableNode);
 				}
 			}
-		} else if (hasGenuineMultipleFieldNames(scn)) {
-			node = new NexusTreeNode(scn.getName(), NexusExtractor.NXCollectionClassName, parentNode);
+		} else if (hasGenuineMultipleFieldNames(scannable)) {
+			node = new NexusTreeNode(scannable.getName(), NexusExtractor.NXCollectionClassName, parentNode);
 
 			node.addChildNode(new NexusTreeNode(ATTRIBUTE_KEY_FOR_METADATA_TYPE, NexusExtractor.AttrClassName, node,
 					new NexusGroupData(ATTRIBUTE_VALUE_FOR_METADATA_TYPE_SCANNABLE)));
 
 			String[] outputFormat = null;
-			outputFormat = scn.getOutputFormat();
+			outputFormat = scannable.getOutputFormat();
 
-			int fieldIdx = 0;
-			for( String field : inputNames){
-				String key = field;
-				Object posObj = scannableMap.get(key);
+			int fieldIndex = 0;
+			for (String field : inputNames) {
+				Object posObj = scannableMap.get(field);
 				String units = null;
 
 				if (posObj != null) {
 					try {
-						units = getScannableUnit(scn);
+						units = getScannableUnit(scannable);
 					} catch (DeviceException e1) {
 						logger.error("Error getting scannable unit", e1);
 					}
@@ -750,34 +591,37 @@ public class NXMetaDataProvider extends FindableBase implements NexusTreeAppende
 					NexusGroupData groupData = null;
 					groupData = createNexusGroupData(posObj);
 					if (groupData != null) {
-						NexusTreeNode fieldNode = new NexusTreeNode(field, NexusExtractor.SDSClassName, node, groupData);
-						fieldNode.addChildNode(new NexusTreeNode(ATTRIBUTE_KEY_FOR_FIELD_TYPE, NexusExtractor.AttrClassName, fieldNode,
-								new NexusGroupData(ATTRIBUTE_VALUE_FOR_FIELD_TYPE_INPUT)));
+						NexusTreeNode fieldNode = new NexusTreeNode(field, NexusExtractor.SDSClassName, node,
+								groupData);
+						fieldNode.addChildNode(
+								new NexusTreeNode(ATTRIBUTE_KEY_FOR_FIELD_TYPE, NexusExtractor.AttrClassName, fieldNode,
+										new NexusGroupData(ATTRIBUTE_VALUE_FOR_FIELD_TYPE_INPUT)));
 
 						if (units != null) {
-							fieldNode.addChildNode(new NexusTreeNode(ATTRIBUTE_KEY_FOR_UNITS, NexusExtractor.AttrClassName, fieldNode,
-									new NexusGroupData(units)));
+							fieldNode.addChildNode(new NexusTreeNode(ATTRIBUTE_KEY_FOR_UNITS,
+									NexusExtractor.AttrClassName, fieldNode, new NexusGroupData(units)));
 						}
-						if (outputFormat != null && outputFormat[fieldIdx] != null) {
-							fieldNode.addChildNode(new NexusTreeNode(ATTRIBUTE_KEY_FOR_FORMAT, NexusExtractor.AttrClassName, fieldNode,
-									new NexusGroupData(outputFormat[fieldIdx])));
+						if (outputFormat != null && outputFormat[fieldIndex] != null) {
+							fieldNode.addChildNode(
+									new NexusTreeNode(ATTRIBUTE_KEY_FOR_FORMAT, NexusExtractor.AttrClassName, fieldNode,
+											new NexusGroupData(outputFormat[fieldIndex])));
 						}
 						node.addChildNode(fieldNode);
 					} else {
 						logger.warn("GroupData is null!");
 					}
 				}
-				fieldIdx += 1;
+				fieldIndex += 1;
 			}
 
-			for( String field : extraNames){
+			for (String field : extraNames) {
 				String key = field;
 				Object posObj = scannableMap.get(key);
 				String units = null;
 
 				if (posObj != null) {
 					try {
-						units = getScannableUnit(scn);
+						units = getScannableUnit(scannable);
 					} catch (DeviceException e1) {
 						// TODO Auto-generated catch block
 						logger.error("TODO put description of error here", e1);
@@ -786,85 +630,78 @@ public class NXMetaDataProvider extends FindableBase implements NexusTreeAppende
 					NexusGroupData groupData = null;
 					groupData = createNexusGroupData(posObj);
 					if (groupData != null) {
-						NexusTreeNode fieldNode = new NexusTreeNode(field, NexusExtractor.SDSClassName, node, groupData);
-						fieldNode.addChildNode(new NexusTreeNode(ATTRIBUTE_KEY_FOR_FIELD_TYPE, NexusExtractor.AttrClassName, fieldNode,
-								new NexusGroupData(ATTRIBUTE_VALUE_FOR_FIELD_TYPE_EXTRA)));
+						NexusTreeNode fieldNode = new NexusTreeNode(field, NexusExtractor.SDSClassName, node,
+								groupData);
+						fieldNode.addChildNode(
+								new NexusTreeNode(ATTRIBUTE_KEY_FOR_FIELD_TYPE, NexusExtractor.AttrClassName, fieldNode,
+										new NexusGroupData(ATTRIBUTE_VALUE_FOR_FIELD_TYPE_EXTRA)));
 						if (units != null) {
-							fieldNode.addChildNode(new NexusTreeNode(ATTRIBUTE_KEY_FOR_UNITS, NexusExtractor.AttrClassName, fieldNode,
-									new NexusGroupData(units)));
+							fieldNode.addChildNode(new NexusTreeNode(ATTRIBUTE_KEY_FOR_UNITS,
+									NexusExtractor.AttrClassName, fieldNode, new NexusGroupData(units)));
 						}
-						if (outputFormat != null && outputFormat[fieldIdx] != null) {
-							fieldNode.addChildNode(new NexusTreeNode(ATTRIBUTE_KEY_FOR_FORMAT, NexusExtractor.AttrClassName, fieldNode,
-									new NexusGroupData(outputFormat[fieldIdx])));
+						if (outputFormat != null && outputFormat[fieldIndex] != null) {
+							fieldNode.addChildNode(
+									new NexusTreeNode(ATTRIBUTE_KEY_FOR_FORMAT, NexusExtractor.AttrClassName, fieldNode,
+											new NexusGroupData(outputFormat[fieldIndex])));
 						}
 						node.addChildNode(fieldNode);
 					} else {
 						logger.warn("GroupData is null!");
 					}
 				}
-				fieldIdx += 1;
+				fieldIndex += 1;
 			}
 
 		} else {
 			String key = null;
-			int fieldIdx = 0;
+			int fieldIndex = 0;
 			String whoami = "";
-			if (inputSize==1) {
-				key = inputNames.get(fieldIdx);
+			if (inputNames.size() == 1) {
+				key = inputNames.get(fieldIndex);
 				whoami = "input";
-			} else if (extraSize == 1){
-				key = extraNames.get(fieldIdx);
+			} else if (extraNames.size() == 1) {
+				key = extraNames.get(fieldIndex);
 				whoami = "extra";
+			} else {
+				key = scannable.getName();
 			}
-			else {
-				key = scn.getName();
-			}
 
-			String[] outputFormat = null;
-			outputFormat = scn.getOutputFormat();
-
-			Object posObj = scannableMap.get(key);
-			String units = null;
-
+			final String[] outputFormat = scannable.getOutputFormat();
+			final Object posObj = scannableMap.get(key);
 			if (posObj != null) {
+				String units = null;
 				try {
-					units = getScannableUnit(scn);
+					units = getScannableUnit(scannable);
 				} catch (DeviceException e1) {
-					logger.error("TODO put description of error here", e1);
+					logger.error("Could not get units for scannable {}", scannable.getName());
 				}
 
-				NexusGroupData groupData = null;
-				groupData = createNexusGroupData(posObj);
+				final NexusGroupData groupData = createNexusGroupData(posObj);
 				if (groupData != null) {
 					node = new NexusTreeNode(key, NexusExtractor.SDSClassName, parentNode, groupData);
 
-					if (parentNode.getAttribute(ATTRIBUTE_KEY_FOR_METADATA_TYPE) == null ) {
-						node.addChildNode(new NexusTreeNode(ATTRIBUTE_KEY_FOR_METADATA_TYPE, NexusExtractor.AttrClassName, node,
-							new NexusGroupData(ATTRIBUTE_VALUE_FOR_METADATA_TYPE_SCANNABLE)));
+					if (parentNode.getAttribute(ATTRIBUTE_KEY_FOR_METADATA_TYPE) == null) {
+						node.addChildNode(
+								new NexusTreeNode(ATTRIBUTE_KEY_FOR_METADATA_TYPE, NexusExtractor.AttrClassName, node,
+										new NexusGroupData(ATTRIBUTE_VALUE_FOR_METADATA_TYPE_SCANNABLE)));
 					}
-					//else
-					//{
-					//	System.out.println("Metadata type already set on the parent");
-					//}
 
 					if (whoami.equals("input")) {
-						node.addChildNode(new NexusTreeNode(ATTRIBUTE_KEY_FOR_FIELD_TYPE, NexusExtractor.AttrClassName, node,
-								new NexusGroupData(ATTRIBUTE_VALUE_FOR_FIELD_TYPE_INPUT)));
+						node.addChildNode(new NexusTreeNode(ATTRIBUTE_KEY_FOR_FIELD_TYPE, NexusExtractor.AttrClassName,
+								node, new NexusGroupData(ATTRIBUTE_VALUE_FOR_FIELD_TYPE_INPUT)));
 					} else if (whoami.equals("extra")) {
-						node.addChildNode(new NexusTreeNode(ATTRIBUTE_KEY_FOR_FIELD_TYPE, NexusExtractor.AttrClassName, node,
-								new NexusGroupData(ATTRIBUTE_VALUE_FOR_FIELD_TYPE_EXTRA)));
+						node.addChildNode(new NexusTreeNode(ATTRIBUTE_KEY_FOR_FIELD_TYPE, NexusExtractor.AttrClassName,
+								node, new NexusGroupData(ATTRIBUTE_VALUE_FOR_FIELD_TYPE_EXTRA)));
 					}
 
-					if (units != null && units.length()>0) {
+					if (units != null && units.length() > 0) {
 						node.addChildNode(new NexusTreeNode(ATTRIBUTE_KEY_FOR_UNITS, NexusExtractor.AttrClassName, node,
 								new NexusGroupData(units)));
 
-						if (outputFormat != null && outputFormat[fieldIdx] != null) {
-							//System.out.println("\t\t output format = " + outputFormat[fieldIdx]);
-							node.addChildNode(new NexusTreeNode(ATTRIBUTE_KEY_FOR_FORMAT, NexusExtractor.AttrClassName, node,
-									new NexusGroupData(outputFormat[fieldIdx])));
+						if (outputFormat != null && outputFormat[fieldIndex] != null) {
+							node.addChildNode(new NexusTreeNode(ATTRIBUTE_KEY_FOR_FORMAT, NexusExtractor.AttrClassName,
+									node, new NexusGroupData(outputFormat[fieldIndex])));
 						}
-
 					}
 				} else {
 					System.out.println("***NEW goupData is null!");
@@ -877,17 +714,19 @@ public class NXMetaDataProvider extends FindableBase implements NexusTreeAppende
 		return node;
 	}
 
-	public boolean hasGenuineMultipleFieldNames(Scannable scn) {
-		List<String> inputNames = new Vector<String>();
-		inputNames = getScannableInputNames(scn);
-		List<String> extraNames = new Vector<String>();
-		extraNames = getScannableExtraNames(scn);
+	public boolean hasGenuineMultipleFieldNames(Scannable scannable) {
+		final List<String> inputNames = getScannableInputNames(scannable);
+		final List<String> extraNames = getScannableExtraNames(scannable);
 
-		int inputSize = inputNames.size();
-		int extraSize = extraNames.size();
+		final int inputSize = inputNames.size();
+		final int extraSize = extraNames.size();
 
-		boolean hasRedundantSingleInputName = (inputSize == 1 && extraSize == 0 && (scn.getName().equals(inputNames.get(0)) || inputNames.get(0).equals(Scannable.DEFAULT_INPUT_NAME)));
-		boolean hasRedundanSingleExtraName = (inputSize == 0 && extraSize == 1 && (scn.getName().equals(extraNames.get(0)) || extraNames.get(0).equals(Scannable.DEFAULT_INPUT_NAME)));
+		boolean hasRedundantSingleInputName = (inputSize == 1 && extraSize == 0
+				&& (scannable.getName().equals(inputNames.get(0))
+						|| inputNames.get(0).equals(Scannable.DEFAULT_INPUT_NAME)));
+		boolean hasRedundanSingleExtraName = (inputSize == 0 && extraSize == 1
+				&& (scannable.getName().equals(extraNames.get(0))
+						|| extraNames.get(0).equals(Scannable.DEFAULT_INPUT_NAME)));
 		boolean hasRedundantSingleFieldName = (hasRedundantSingleInputName || hasRedundanSingleExtraName);
 
 		return !hasRedundantSingleFieldName;
@@ -902,10 +741,10 @@ public class NXMetaDataProvider extends FindableBase implements NexusTreeAppende
 			groupData = new NexusGroupData(((PyString) object).getString());
 		} else if (object instanceof Integer) {
 			groupData = new NexusGroupData((Integer) object);
-//		} else if (object instanceof Long) {
-//			Double dblValue = ((Number) object).doubleValue();
-//			double[] dblData = new double[] { dblValue };
-//			groupData = new NexusGroupData(dblData);
+			// } else if (object instanceof Long) {
+			// Double dblValue = ((Number) object).doubleValue();
+			// double[] dblData = new double[] { dblValue };
+			// groupData = new NexusGroupData(dblData);
 		} else if (object instanceof Number) {
 			groupData = new NexusGroupData(((Number) object).doubleValue());
 		} else if (object instanceof double[]) {
@@ -915,12 +754,12 @@ public class NXMetaDataProvider extends FindableBase implements NexusTreeAppende
 		} else if (object instanceof PyFloat) {
 			groupData = new NexusGroupData(((PyFloat) object).asDouble());
 		} else if (object instanceof PyInteger) {
-			//store as NX_FLOAT64 since a lot of things may pass an int for an expect a double on readback
-			groupData = new NexusGroupData( (double) ( (PyInteger) object).getValue() );
+			// store as NX_FLOAT64 since a lot of things may pass an int for an expect a double on readback
+			groupData = new NexusGroupData((double) ((PyInteger) object).getValue());
 		} else if (object instanceof long[]) {
-			long[] data = (long[]) object;
-			int dataLen = data.length;
-			double[] dblData = new double[dataLen];
+			final long[] data = (long[]) object;
+			final int dataLen = data.length;
+			final double[] dblData = new double[dataLen];
 			for (int i = 0; i < dataLen; i++) {
 				dblData[i] = data[i];
 			}
@@ -935,12 +774,10 @@ public class NXMetaDataProvider extends FindableBase implements NexusTreeAppende
 			groupData = new NexusGroupData(dblData);
 		} else if (object instanceof PyList) {
 			// coerce PyList into double array.
-			int dataLen = ((PyList) object).__len__();
-			double[] dblData = new double[dataLen];
+			final int dataLen = ((PyList) object).__len__();
+			final double[] dblData = new double[dataLen];
 			for (int i = 0; i < dataLen; i++) {
-				// dblData[i] = Double.valueOf(((PyList) object).__getitem__(i).toString());
-				PyObject item = ((PyList) object).__finditem__(i);
-
+				final PyObject item = ((PyList) object).__finditem__(i);
 				if (item instanceof PyNone) {
 					dblData[i] = Double.NaN;
 				} else {
@@ -950,12 +787,10 @@ public class NXMetaDataProvider extends FindableBase implements NexusTreeAppende
 			groupData = new NexusGroupData(dblData);
 		} else if (object instanceof PySequence) {
 			// coerce PySequence into double array.
-			int dataLen = ((PySequence) object).__len__();
-			double[] dblData = new double[dataLen];
+			final int dataLen = ((PySequence) object).__len__();
+			final double[] dblData = new double[dataLen];
 			for (int i = 0; i < dataLen; i++) {
-				// dblData[i] = Double.valueOf(((PySequence) object).__getitem__(i).toString());
-				PyObject item = ((PySequence) object).__finditem__(i);
-
+				final PyObject item = ((PySequence) object).__finditem__(i);
 				if (item instanceof PyNone) {
 					dblData[i] = Double.NaN;
 				} else {
@@ -964,8 +799,8 @@ public class NXMetaDataProvider extends FindableBase implements NexusTreeAppende
 			}
 			groupData = new NexusGroupData(dblData);
 		} else {
-			logger.error("unhandled data type: " + object.getClass().getName()
-					+ " - this dataset might not have been written correctly to Nexus file.");
+			logger.error("unhandled data type: {} - this dataset might not have been written correctly to Nexus file.",
+					object.getClass().getName());
 			groupData = new NexusGroupData(object.toString());
 		}
 		return groupData;
@@ -975,409 +810,348 @@ public class NXMetaDataProvider extends FindableBase implements NexusTreeAppende
 		if (scannableGetPositionOut == null)
 			return new Object[] {};
 
-		Object[] elements = new Object[] { scannableGetPositionOut };
+		final Object[] elements;
 		if (scannableGetPositionOut instanceof Object[]) {
 			elements = (Object[]) scannableGetPositionOut;
 		} else if (scannableGetPositionOut instanceof PySequence) {
-			PySequence seq = (PySequence) scannableGetPositionOut;
-			int len = seq.__len__();
+			final PySequence seq = (PySequence) scannableGetPositionOut;
+			final int len = seq.__len__();
 			elements = new Object[len];
 			for (int i = 0; i < len; i++) {
 				elements[i] = seq.__finditem__(i);
 			}
 		} else if (scannableGetPositionOut.getClass().isArray()) {
-			int len = ArrayUtils.getLength(scannableGetPositionOut);
+			final int len = ArrayUtils.getLength(scannableGetPositionOut);
 			elements = new Object[len];
 			for (int i = 0; i < len; i++) {
 				elements[i] = Array.get(scannableGetPositionOut, i);
 			}
 		} else if (scannableGetPositionOut instanceof PlottableDetectorData) {
 			elements = ((PlottableDetectorData) scannableGetPositionOut).getDoubleVals();
+		} else {
+			elements = new Object[] { scannableGetPositionOut };
 		}
 		return elements;
 	}
 
 	public static String getScannableUnit(Scannable s) throws DeviceException {
-		String unit = null;
 		if (s instanceof ScannableMotionUnits) {
-			unit = ((ScannableMotionUnits) s).getUserUnits();
-		} else {
-			Object attribute = s.getAttribute(ScannableMotionUnits.USERUNITS);
-			if (attribute != null){
-				unit = attribute.toString();
-			}
+			return ((ScannableMotionUnits) s).getUserUnits();
 		}
-		return unit;
+
+		final Object attribute = s.getAttribute(ScannableMotionUnits.USERUNITS);
+		if (attribute != null) {
+			return attribute.toString();
+		}
+
+		return null;
 	}
 
 	public INexusTree createChildNodeForMetaTextEntry(String name, String nxClass, INexusTree parentNode,
 			NexusGroupData groupData) {
-
-		INexusTree outTree = new NexusTreeNode(name, nxClass, parentNode, groupData);
-		return outTree;
+		return new NexusTreeNode(name, nxClass, parentNode, groupData);
 	}
 
 	public void modifyFormattingMap(Map<String, String> modificationsMap) {
-		//this.formattingMap = formattingMap;
 		for (Entry<String, String> e : modificationsMap.entrySet()) {
 			this.formattingMap.put(e.getKey(), e.getValue());
-			//System.out.println("modifyFormattingMap: key = " + e.getKey() + ", val = " + e.getValue());
 		}
 	}
 
-}
+	/**
+	 * class to create a map of entries from the nexus tree
+	 *
+	 * A key is a concatenation of nexus groups names, separated by a dot, followed by the item name the entry is the
+	 * SDS item plus the format attribute as a String
+	 */
+	private static class NexusTreeStringDump {
+		private static final String KEY_SEPARATOR = ".";
+		private final INexusTree tree;
+		private final Map<String, NexusDumpItem> dumpMap;
+		private final List<Pair<String, NexusDumpItem>> dumpList;
 
-/**
- * class to create a map of entries from the nexus tree
- *
- * A key is a concatenation of nexus groups names, separated by a dot, followed by the item name
- * the entry is the SDS item  plus the format attribute as a String
- */
-class NexusTreeStringDump {
-	private static final String KEY_SEPARATOR = ".";
-	INexusTree tree;
-	private Map<String, NexusDumpItem> dumpMap;
-	private List<Pair<String, NexusDumpItem>> dumpList;
+		public NexusTreeStringDump(INexusTree tree) {
+			super();
+			this.tree = tree;
+			this.dumpMap = new HashMap<>();
+			this.dumpList = new ArrayList<>();
+			traverse();
+		}
 
-	public NexusTreeStringDump(INexusTree tree) {
-		super();
-		this.tree = tree;
-		this.dumpMap = new HashMap<String, NexusDumpItem>();
-		this.dumpList = new Vector<Pair<String, NexusDumpItem>>();
-		Traverse();
-	}
+		@Override
+		public String toString() {
+			return "NexusTreeStringDump [tree=" + tree + "]";
+		}
 
-	@Override
-	public String toString() {
-		return "NexusTreeStringDump [tree=" + tree + "]";
-	}
-
-	private void Traverse() {
-		if (this.tree != null) {
-			int nNodes = this.tree.getNumberOfChildNodes();
-			String key = "";
-			for (int i = 0; i < nNodes; i++) {
-				INexusTree node = this.tree.getChildNode(i);
-				Traverse(node, key);
+		private void traverse() {
+			if (this.tree != null) {
+				final int nNodes = this.tree.getNumberOfChildNodes();
+				for (int i = 0; i < nNodes; i++) {
+					final INexusTree node = this.tree.getChildNode(i);
+					traverse(node, "");
+				}
 			}
 		}
-	}
 
+		private void traverse(INexusTree tree, String key) {
+			if (tree == null) {
+				return;
+			}
 
-	private void Traverse(INexusTree tree, String key) {
-		if (tree != null) {
 			if (isToBeTraversed(tree)) {
-				int nNodes = tree.getNumberOfChildNodes();
+				final int nNodes = tree.getNumberOfChildNodes();
 				key += tree.getName() + KEY_SEPARATOR;
 				if (nNodes > 0) {
 					for (int i = 0; i < nNodes; i++) {
-						INexusTree node = tree.getChildNode(i);
-						Traverse(node, key);
+						final INexusTree node = tree.getChildNode(i);
+						traverse(node, key);
 					}
 				}
-			} else {
-				if (isToBeHarvested(tree)) {
-					key += tree.getName();
-					int nNodes = tree.getNumberOfChildNodes();
+			} else if (isToBeHarvested(tree)) {
+				key += tree.getName();
+				final int nNodes = tree.getNumberOfChildNodes();
 
-					NexusGroupData ngdData = tree.getData();
-
-					Map<String, NexusGroupData> ngdMap = new HashMap<String, NexusGroupData>();
-					for (int i = 0; i < nNodes; i++) {
-						INexusTree node = tree.getChildNode(i);
-						ngdMap.put(node.getName(), node.getData());
-					}
-
-					NexusGroupData ngdUnits = ngdMap.get("units");
-					NexusGroupData ngdFormat = ngdMap.get("format");
-					NexusGroupData ngdFieldType = ngdMap.get("field_type");
-
-					NexusDumpItem item = new NexusDumpItem(ngdData, ngdUnits, ngdFormat, ngdFieldType);
-					dumpMap.put(key, new NexusDumpItem(ngdData, ngdUnits, ngdFormat, ngdFieldType));
-					Pair<String, NexusDumpItem> e = new Pair<String, NexusDumpItem>(key,item);
-					dumpList.add(e);
+				final NexusGroupData ngdData = tree.getData();
+				final Map<String, NexusGroupData> ngdMap = new HashMap<>();
+				for (int i = 0; i < nNodes; i++) {
+					INexusTree node = tree.getChildNode(i);
+					ngdMap.put(node.getName(), node.getData());
 				}
+
+				final NexusGroupData ngdUnits = ngdMap.get("units");
+				final NexusGroupData ngdFormat = ngdMap.get("format");
+				final NexusGroupData ngdFieldType = ngdMap.get("field_type");
+
+				final NexusDumpItem item = new NexusDumpItem(ngdData, ngdUnits, ngdFormat, ngdFieldType);
+				dumpMap.put(key, new NexusDumpItem(ngdData, ngdUnits, ngdFormat, ngdFieldType));
+				final Pair<String, NexusDumpItem> e = new Pair<>(key, item);
+				dumpList.add(e);
 			}
 		}
-	}
-	public Map<String, NexusDumpItem> getDumpMap() {
-		return dumpMap;
-	}
 
-	public List<Pair<String, NexusDumpItem>> getDumpList() {
-		return dumpList;
-	}
-
-	public boolean isToBeTraversed(INexusTree tree) {
-		int nNodes = tree.getNumberOfChildNodes();
-		boolean out = (nNodes > 0);
-		Map<String, Serializable> attributes = tree.getAttributes();
-		if (attributes != null && attributes.size() == nNodes ) {
-
-			Serializable units = attributes.get("units");
-			Serializable format = attributes.get("format");
-			Serializable field_t = attributes.get("field_type");
-			Serializable metadata_t = attributes.get("metadata_type");
-
-			int nodesToBeTraversed = nNodes;
-			if (units != null) {
-				nodesToBeTraversed -= 1;
-			}
-			if (format != null) {
-				nodesToBeTraversed -= 1;
-			}
-			if (field_t != null) {
-				nodesToBeTraversed -= 1;
-			}
-			if (metadata_t != null) {
-				nodesToBeTraversed -= 1;
-			}
-			out = (nodesToBeTraversed > 0);
+		public List<Pair<String, NexusDumpItem>> getDumpList() {
+			return dumpList;
 		}
-		return out;
-	}
 
-	public boolean isToBeHarvested(INexusTree tree) {
-		int nNodes = tree.getNumberOfChildNodes();
-		boolean out = (nNodes > 0);
-		Map<String, Serializable> attributes = tree.getAttributes();
-		if (attributes != null && attributes.size() == nNodes ) {
+		public boolean isToBeTraversed(INexusTree tree) {
+			final int numChildNodes = tree.getNumberOfChildNodes();
+			final Map<String, Serializable> attributes = tree.getAttributes();
+			if (attributes != null && attributes.size() == numChildNodes) {
+				Serializable units = attributes.get("units");
+				Serializable format = attributes.get("format");
+				Serializable field_t = attributes.get("field_type");
+				Serializable metadata_t = attributes.get("metadata_type");
 
-			Serializable units = attributes.get("units");
-			Serializable format = attributes.get("format");
-			Serializable field_t = attributes.get("field_type");
-			Serializable metadata_t = attributes.get("metadata_type");
+				int nodesToBeTraversed = numChildNodes;
+				if (units != null) {
+					nodesToBeTraversed -= 1;
+				}
+				if (format != null) {
+					nodesToBeTraversed -= 1;
+				}
+				if (field_t != null) {
+					nodesToBeTraversed -= 1;
+				}
+				if (metadata_t != null) {
+					nodesToBeTraversed -= 1;
+				}
+				return (nodesToBeTraversed > 0);
+			}
 
-			int nodesRemaining = nNodes;
-			if (units != null) {
-				nodesRemaining -= 1;
-			}
-			if (format != null) {
-				nodesRemaining -= 1;
-			}
-			if (field_t != null) {
-				nodesRemaining -= 1;
-			}
-			if (metadata_t != null) {
-				nodesRemaining -= 1;
-			}
-			out = (nodesRemaining == 0);
+			return numChildNodes > 0;
 		}
-		return out;
+
+		public boolean isToBeHarvested(INexusTree tree) {
+			final int numChildNodes = tree.getNumberOfChildNodes();
+			final Map<String, Serializable> attributes = tree.getAttributes();
+			if (attributes != null && attributes.size() == numChildNodes) {
+				Serializable units = attributes.get("units");
+				Serializable format = attributes.get("format");
+				Serializable field_t = attributes.get("field_type");
+				Serializable metadata_t = attributes.get("metadata_type");
+
+				int nodesRemaining = numChildNodes;
+				if (units != null) {
+					nodesRemaining -= 1;
+				}
+				if (format != null) {
+					nodesRemaining -= 1;
+				}
+				if (field_t != null) {
+					nodesRemaining -= 1;
+				}
+				if (metadata_t != null) {
+					nodesRemaining -= 1;
+				}
+				return nodesRemaining == 0;
+			}
+			return numChildNodes > 0;
+		}
+
 	}
 
-}
+	private static class DatumForJythonList implements Comparable<DatumForJythonList> {
+		private final String datumName; // ls part
+		private final String datumValue; // ll extension
+		private final String datumFieldType; // input or extra (for scannable)
 
+		public DatumForJythonList(String name, String value, String fieldType) {
+			super();
+			this.datumName = name;
+			this.datumValue = value;
+			this.datumFieldType = fieldType;
+		}
 
-class DatumForJythonList {
-	String datumName;			// ls part
-	String datumValue;			// ll extension
-	String datumFieldType;		// input or extra (for scannable)
+		@Override
+		public int compareTo(DatumForJythonList other) {
+			final String thisName = this.datumName;
+			final String otherName = other.datumName;
+			final String thisType = this.datumFieldType;
+			final String otherType = other.datumFieldType;
 
-	public DatumForJythonList(String name, String value, String field_type) {
-		super();
-		this.datumName = name;
-		this.datumValue = value;
-		this.datumFieldType = field_type;
-	}
-}
+			final String[] thisSegments = thisName.split("\\.", -1);
+			final String[] otherSegments = otherName.split("\\.", -1);
 
+			String thisRoot = thisName;
+			final int lastIdx1 = thisName.lastIndexOf("\\.");
+			if (lastIdx1 >= 0) {
+				thisRoot = thisName.substring(0, lastIdx1);
+			}
 
-/*
- * Class to create a user friendly string representation of an item
- */
-class NexusDumpItem {
-	NexusGroupData data;
-	NexusGroupData units;
-	NexusGroupData format;
-	private NexusGroupData field_type;
+			String otherRoot = otherName;
+			int lastIdx2 = otherName.lastIndexOf("\\.");
+			if (lastIdx2 >= 0) {
+				otherRoot = otherName.substring(0, lastIdx2);
+			}
 
-	@Override
-	public String toString() {
-		Object targetVal = null;
+			if (thisSegments.length != otherSegments.length) {
+				return thisName.toLowerCase().compareTo(otherName.toLowerCase());
+			}
 
-		String out = "";
-		if (data != null) {
-			Object val = data.dimensions.length==1 && data.dimensions[0]==1 ? data.getFirstValue() : data.getBuffer();
-			if (format !=null) {
-				out = String.format(format.dataToTxt(false, true, false), val);
-			} else {
-				String defaultFormat = "";
-				if (val instanceof Integer) {
-					defaultFormat = "%d";
-					targetVal = val;
-				}
-				else if (val instanceof Double) {
-					defaultFormat = "%5.3f";
-					targetVal = val;
-				}
-				else if (val instanceof String) {
-					defaultFormat = "%s";
-					targetVal = val;
-				}
-				else if (val instanceof byte[]) {
-					defaultFormat = "%s";
-					String sVal = new String( (byte[]) val);
-					targetVal = sVal;
-				} else if (val instanceof int[]) {
-					int[] intVal = (int[]) val;
-					int intValLen = intVal.length;
-					Integer[] intTargetVal = new Integer[intValLen];
-					intTargetVal = new Integer[intValLen];
-					for (int i = 0; i < intValLen; i++) {
-						intTargetVal[i] = intVal[i];
-					}
-					val = targetVal;
-
-					defaultFormat = createIntArrayFormat((Object[])intTargetVal);
-					targetVal = intTargetVal;
-				} else if (val instanceof double[]) {
-					double[] dblVal = (double[]) val;
-					int dblValLen = dblVal.length;
-					Double[] dblTargetVal = new Double[dblValLen];
-					dblTargetVal = new Double[dblValLen];
-					for (int i = 0; i < dblValLen; i++) {
-						dblTargetVal[i] = dblVal[i];
-					}
-
-					val = targetVal;
-
-					defaultFormat = createFloatArrayFormat((Object[])dblTargetVal);
-					targetVal = dblTargetVal;
-				}
-
-				if (targetVal instanceof Object[]) {
-					out = String.format(defaultFormat, (Object[])targetVal);
+			// if belong to the same scannable
+			if (thisRoot.equals(otherRoot)) {
+				if (thisType.equals(NXMetaDataProvider.ATTRIBUTE_VALUE_FOR_FIELD_TYPE_INPUT)
+						&& otherType.equals(NXMetaDataProvider.ATTRIBUTE_VALUE_FOR_FIELD_TYPE_EXTRA)) {
+					// input before extra
+					return 1;
+				} else if (thisType.equals(NXMetaDataProvider.ATTRIBUTE_VALUE_FOR_FIELD_TYPE_EXTRA)
+						&& otherType.equals(NXMetaDataProvider.ATTRIBUTE_VALUE_FOR_FIELD_TYPE_INPUT)) {
+					// input before extra
+					return -1;
 				} else {
-					out = String.format(defaultFormat, targetVal);
+					return thisName.toLowerCase().compareTo(otherName.toLowerCase());
 				}
 			}
+
+			return thisName.toLowerCase().compareTo(otherName.toLowerCase());
 		}
 
-		if (units != null) {
-			out += units.dataToTxt(false, true, false);
+	}
+
+	/*
+	 * Class to create a user friendly string representation of an item
+	 */
+	private static class NexusDumpItem {
+		private final NexusGroupData data;
+		private final NexusGroupData units;
+		private final NexusGroupData format;
+		private final NexusGroupData fieldType;
+
+		public NexusDumpItem(NexusGroupData data, NexusGroupData units, NexusGroupData format,
+				NexusGroupData fieldType) {
+			super();
+			this.data = data;
+			this.units = units;
+			this.format = format;
+			this.fieldType = fieldType;
 		}
-		return out;
-	}
 
-	public NexusDumpItem(NexusGroupData data, NexusGroupData units, NexusGroupData format, NexusGroupData field_type) {
-		super();
-		this.data = data;
-		this.units = units;
-		this.format = format;
-		this.field_type = field_type;
-	}
+		@Override
+		public String toString() {
+			Object targetVal = null;
 
-	public static String formatIntArray(Object... args) {
+			String out = "";
+			if (data != null) {
+				Object val = data.dimensions.length == 1 && data.dimensions[0] == 1 ? data.getFirstValue()
+						: data.getBuffer();
+				if (format != null) {
+					out = String.format(format.dataToTxt(false, true, false), val);
+				} else {
+					String defaultFormat = "";
+					if (val instanceof Integer) {
+						defaultFormat = "%d";
+						targetVal = val;
+					} else if (val instanceof Double) {
+						defaultFormat = "%5.3f";
+						targetVal = val;
+					} else if (val instanceof String) {
+						defaultFormat = "%s";
+						targetVal = val;
+					} else if (val instanceof byte[]) {
+						defaultFormat = "%s";
+						final String stringVal = new String((byte[]) val);
+						targetVal = stringVal;
+					} else if (val instanceof int[]) {
+						final int[] intVal = (int[]) val;
+						final Integer[] intTargetVal = Arrays.stream(intVal).mapToObj(Integer::valueOf)
+								.toArray(Integer[]::new);
+						defaultFormat = createIntArrayFormat((Object[]) intTargetVal);
+						targetVal = intTargetVal;
+					} else if (val instanceof double[]) {
+						double[] doubleVal = (double[]) val;
+						final Double[] doubleTargetVal = Arrays.stream(doubleVal).mapToObj(Double::valueOf)
+								.toArray(Double[]::new);
+						defaultFormat = createFloatArrayFormat((Object[]) doubleTargetVal);
+						targetVal = doubleTargetVal;
+					}
 
-		String itemSep = ", ";
-		String itemFormat = "%d" + itemSep;
-		String format = new String(new char[args.length]).replace("\0", itemFormat);
-		format = "[" + format;
+					if (targetVal instanceof Object[]) {
+						out = String.format(defaultFormat, (Object[]) targetVal);
+					} else {
+						out = String.format(defaultFormat, targetVal);
+					}
+				}
+			}
 
-		int formatLen = format.length();
-		int itemSepLen = itemSep.length();
-		if (formatLen >= itemSepLen) {
-			format = format.substring(0, formatLen - itemSepLen);
+			if (units != null) {
+				out += units.dataToTxt(false, true, false);
+			}
+			return out;
 		}
-		format += "]";
-		return String.format(format, args);
-	}
 
-	public static String createIntArrayFormat(Object... args) {
+		public String createIntArrayFormat(Object... args) {
+			final String itemSep = ", ";
+			final String itemFormat = "%d" + itemSep;
+			String format = new String(new char[args.length]).replace("\0", itemFormat);
+			format = "[" + format;
 
-		String itemSep = ", ";
-		String itemFormat = "%d" + itemSep;
-		String format = new String(new char[args.length]).replace("\0", itemFormat);
-		format = "[" + format;
-
-		int formatLen = format.length();
-		int itemSepLen = itemSep.length();
-		if (formatLen >= itemSepLen) {
-			format = format.substring(0, formatLen - itemSepLen);
+			final int formatLen = format.length();
+			final int itemSepLen = itemSep.length();
+			if (formatLen >= itemSepLen) {
+				format = format.substring(0, formatLen - itemSepLen);
+			}
+			format += "]";
+			return format;
 		}
-		format += "]";
-		return format;
-	}
 
-	public static String createArrayFormat(Object... args) {
-		String itemSep = ", ";
-		String itemFormat = "";
-		if (args instanceof Double[]) {
-			itemFormat = "%5.3f";
-		} else if (args instanceof Integer[]) {
-			itemFormat = "%d";
+		public String createFloatArrayFormat(Object... args) {
+			final String itemSep = ", ";
+			final String itemFormat = "%5.3f" + itemSep;
+			String format = new String(new char[args.length]).replace("\0", itemFormat);
+			format = "[" + format;
+
+			final int formatLen = format.length();
+			final int itemSepLen = itemSep.length();
+			if (formatLen >= itemSepLen) {
+				format = format.substring(0, formatLen - itemSepLen);
+			}
+			format += "]";
+			return format;
 		}
-		itemFormat += itemSep;
 
-		String format = new String(new char[args.length]).replace("\0", itemFormat);
-		format = "[" + format;
-
-		int formatLen = format.length();
-		int itemSepLen = itemSep.length();
-		if (formatLen >= itemSepLen) {
-			format = format.substring(0, formatLen - itemSepLen);
+		public NexusGroupData getFieldType() {
+			return fieldType;
 		}
-		format += "]";
-		return format;
-	}
-	public static String formatFloatArray(Object... args) {
-		String itemSep = ", ";
-		String itemFormat = "%5.3f" + itemSep;
-		String format = new String(new char[args.length]).replace("\0", itemFormat);
-		format = "[" + format;
-
-		int formatLen = format.length();
-		int itemSepLen = itemSep.length();
-		if (formatLen >= itemSepLen) {
-			format = format.substring(0, formatLen - itemSepLen);
-		}
-		format += "]";
-		//System.out.println("formatFloatArray: format used = " + format);
-		return String.format(format, args);
 	}
 
-	public static String formatArray(Object... args) {
-		String itemSep = ", ";
-		String itemFormat = "";
-		if (args instanceof Double[]) {
-			itemFormat = "%5.3f";
-		} else if (args instanceof Integer[]) {
-			itemFormat = "%d";
-		}
-		itemFormat += itemSep;
-		String format = new String(new char[args.length]).replace("\0", itemFormat);
-		format = "[" + format;
-
-		int formatLen = format.length();
-		int itemSepLen = itemSep.length();
-		if (formatLen >= itemSepLen) {
-			format = format.substring(0, formatLen - itemSepLen);
-		}
-		format += "]";
-		return String.format(format, args);
-	}
-
-	public static String createFloatArrayFormat(Object... args) {
-		String itemSep = ", ";
-		String itemFormat = "%5.3f" + itemSep;
-		String format = new String(new char[args.length]).replace("\0", itemFormat);
-		format = "[" + format;
-
-		int formatLen = format.length();
-		int itemSepLen = itemSep.length();
-		if (formatLen >= itemSepLen) {
-			format = format.substring(0, formatLen - itemSepLen);
-		}
-		format += "]";
-		return format;
-	}
-
-	public NexusGroupData getFieldType() {
-		return field_type;
-	}
-
-	public void setFieldType(NexusGroupData field_type) {
-		this.field_type = field_type;
-	}
 }
